--- a/languages/en-version.json
+++ b/languages/en-version.json
@@ -1,6 +1,8 @@
 {
     "music-link": "Music platforms",
     "info-link": "Information",
+    "info-about": "Updates",
+    "about-site": "About site",
     "released-albums": "Released albums",
     "vidgets": "Widgets",
     "album-genre": "Genre:",
